test/test_cases/invalid/semanticErr/scope/selfReference.wacc
# spooky strings

# Output:
#

# Program:

begin
	int c = c ;
	println c
end
